
* confmirt.model() can accept a string inputs, which may be useful for knitr/sweave documents
  since the scan() function tends to hang

* multipleGroup() now has the logical options bfactor = TRUE to use the dimensional reduction algorithm 
  for when the factor pattern is structured like a bifactor model

* new fitIndices() function added to compute additional model fit statistics such as M2

* lower bound parameters under more stringent control during estimation and are bounded to never 
  be higher than .6

* infit and outfit stats in itemfit() now work for Rasch partial credit and rating scale models

* Rasch rating scale models can now be estimated with potential rsm.blocks (same as grsm model). 
  "Generalized" rating scale models can also be estimated, though this requires manipulating the 
  starting values directly

* added AICc and sample size adjusted BIC (SABIC) information statistics

* new mixedmirt() function for estimating IRT models with person and item level (e.g., LLTM) covariates.
  Currently only supports fixed effect predictors, but random effect predictors are being developed
 
* more structured output when using the anova() generic

* standard errors no longer slightly positively biased when parameter constraints are imposed 

----------------------------------------------------------------
mirt 0.4.2
----------------------------------------------------------------

* item probability functions now only permit permissible values, and models may converge even when
  the log-likelihood decreases during estimation. In the EM if the model does not have a strictly 
  increasing log-likelihood then a warning message will be printed

* infit and outfit statistics are now only applicable to Rasch models (as they should be), 
  and in itemfit/personfit() a 'method' argument has been added to specify which factor score 
  estimates should be used

* read.mirt() re-added into the package to allow for translating estimated models into a format