@@ -83,3 +83,4 @@ Collate:
     'MHRM.mixed.R'
     'Mixed-methods.R'
     'fitIndices.R'
+    'testinfo.R'
