@@ -18,6 +18,7 @@ export(personfit)
 export(polymirt)
 export(read.mirt)
 export(simdata)
+export(testinfo)
 export(wald)
 exportClasses(ConfirmatoryClass)
 exportClasses(ExploratoryClass)
